--- a/conf/app.conf
+++ b/conf/app.conf
@@ -3,7 +3,8 @@ httpport = 8081
 runmode = dev
 
 
-dns=root:mysql@tcp(192.168.0.123:3306)/mes?charset=utf8
+#dns=root:mysql@tcp(192.168.0.123:3306)/mes?charset=utf8
+dns=root:123@tcp(localhost:3306)/mes?charset=utf8
 
 
 sessionon = true
